Start V0.2 HTTP reference implementation
